--- a/src/main/java/org/tamm/datepicker/FormPage.properties
+++ b/src/main/java/org/tamm/datepicker/FormPage.properties
@@ -1,4 +1,5 @@
 form.startDate=Alguskuupäev
+startDate.DateValidator.range=Alguskuupäev peab olema vahemikus "${minimum}" kuni "${maximum}"
 form.endDate=Lõppkuupäev
 startDate.IConverter.Date=Vigane alguskuupäev
 endDate.IConverter.Date=Vigane lõppkuupäev
