--- a/src/main/java/org/tamm/datepicker/FormPage.properties
+++ b/src/main/java/org/tamm/datepicker/FormPage.properties
@@ -3,3 +3,6 @@ startDate.DateValidator.range=Alguskuupäev peab olema vahemikus "${minimum}" kun
 form.endDate=Lõppkuupäev
 startDate.IConverter.Date=Vigane alguskuupäev
 endDate.IConverter.Date=Vigane lõppkuupäev
+DateRangeValidator=DateRangeValidator failed
+form.startDate.Required=Required field
+form.startDate.DateRangeValidator=Range error
